# python-cookiecutter-typer-cli

./: README.md  cookiecutter.json
.github/: copilot-instructions.md  dependabot.yml
{{cookiecutter.project_slug}}/: .pre-commit-config.yaml  Dockerfile  Makefile  README.md  pyproject.toml  setup.py
{{cookiecutter.project_slug}}/.github/: dependabot.yml
{{cookiecutter.project_slug}}/docs/: mkdocs.yml
{{cookiecutter.project_slug}}/docs/docs/: index.md
{{cookiecutter.project_slug}}/requirements/: dev.in  dev.txt  docs.in  docs.txt  publish.in  publish.txt  tests.txt
{{cookiecutter.project_slug}}/tests/: test_config.py  test_help.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/: main.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/commands/: config.py  items.py  users.py
